Fixed spacing in summary table in lomas guide. #433

--- a/css/components/user-guide-lomas.css
+++ b/css/components/user-guide-lomas.css
@@ -209,7 +209,7 @@
 }
 .user-guide-lomas-result-business-description {
 	line-height: 22px;
-	padding: 0 0 11px;
+	padding: 0 0 11px 5px;
 }
 
 .user-guide-lomas-result-process ol {
